--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,16 @@
 
     <artifactId>entitypedia-games-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
 
     <name>Entitypedia Games Client</name>
     <description>Entitypedia Games Java Client</description>
     <url>http://games.entitypedia.org/crosswords/</url>
 
     <scm>
-        <connection>scm:svn:https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/trunk</connection>
-        <developerConnection>scm:svn:https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/trunk</developerConnection>
-        <url>https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/</url>
+        <connection>scm:svn:https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/tags/entitypedia-games-client-1.0.6</connection>
+        <developerConnection>scm:svn:https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/tags/entitypedia-games-client-1.0.6</developerConnection>
+        <url>https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/tags/entitypedia-games-client-1.0.6</url>
     </scm>
 
     <repositories>
