games-client changed to httpclient
git-svn-id: https://dev.entitypedia.org/svn/entitypedia/apps/word-games-client/trunk@2282 468f3c8c-1912-47de-8909-53fc7abe8733

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,18 @@
         </dependency>
 
         <dependency>
+            <groupId>oauth.signpost</groupId>
+            <artifactId>signpost-commonshttp4</artifactId>
+            <version>${signpost.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.2.6</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
