--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <artifactId>entitypedia-games-common-client</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.14</version>
+    <version>1.0.15-SNAPSHOT</version>
 
     <name>Entitypedia Games Client</name>
     <description>Entitypedia Games Java Client</description>
@@ -27,7 +27,7 @@
         <connection>scm:git:https://github.com/EntitypediaGames/games-common-client.git</connection>
         <developerConnection>scm:git:git@github.com:EntitypediaGames/games-common-client.git</developerConnection>
         <url>https://github.com/EntitypediaGames/games-common-client</url>
-      <tag>entitypedia-games-common-client-1.0.14</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <issueManagement>
